<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pemesanan_tiket_pesawat"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/airplane_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        app:cardElevation="5dp"
        app:strokeColor="@color/borderCard"
        app:strokeWidth="4dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/maskapai_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="spread">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/pesawat"
            tools:ignore="ContentDescription"
            android:adjustViewBounds="true" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/maskapai_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        app:cardElevation="5dp"
        app:strokeColor="@color/borderCard"
        app:strokeWidth="4dp"
        app:layout_constraintTop_toBottomOf="@id/airplane_card"
        app:layout_constraintBottom_toTopOf="@id/bottomNavBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingBottom="40dp"
            android:paddingTop="40dp"
            android:paddingEnd="20dp"
            android:paddingStart="30dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/planeIconCard"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/young_blue"
                app:cardCornerRadius="70dp"
                app:strokeWidth="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/ivPlane"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/plane_icon"
                    tools:ignore="ContentDescription" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/maskapai_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/data_maskapai"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/planeIconCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btnLihat"
                app:layout_constraintVertical_chainStyle="packed"/>

            <Button
                android:id="@+id/btnLihat"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:backgroundTint="@color/blue"
                android:gravity="center"
                android:text="@string/lihat"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/maskapai_text"
                app:layout_constraintStart_toEndOf="@id/planeIconCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navbar"
        android:padding="25dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/home"
            android:textColor="@color/white"
            app:cornerRadius="24dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnLogin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/white"
            android:text="@string/login"
            android:textColor="@color/blue"
            app:cornerRadius="24dp"
            app:strokeColor="@color/blue"
            app:strokeWidth="3dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/btnHome"
            app:layout_constraintEnd_toStartOf="@id/btnRegister"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/white"
            android:text="@string/register"
            android:textColor="@color/blue"
            app:cornerRadius="24dp"
            app:strokeColor="@color/blue"
            app:strokeWidth="3dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            tools:ignore="ButtonStyle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>